--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			rel="stylesheet"
 			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + React</title>
+		<title>Akropolis Engenharia</title>
 	</head>
 	<body>
 		<div id="root"></div>
