--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8" />
+		<meta
+			name="description"
+			content="Website designed and built by Rafael Mauricio, for a local construction company. Akropolis Engenharia. This website includes information about the company's latest developments and its history" />
 		<link rel="icon" type="image/png" href="/assets/logo.950c9f26.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
